syslog-ng (3.5.0~rc1-1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
    + Support auto-loading modules (Closes: #650814)
    + The SMTP module is available in syslog-ng-mod-smtp (Closes: #722746)
  * Ship /var/lib/syslog-ng in the syslog-ng-core package, instead of
    creating it in the init script. Thanks Michael Biebl
    <biebl@debian.org> for the report & assistance. (Closes: #699942, #719910)
  * Use dh-systemd for proper systemd-related maintainer scripts. Based on
    a patch by Michael Biebl <biebl@debian.org>. (Closes: #713982,
    #690067)
  * Do not wait for syslog-ng to settle down during installation / update.
    This also fixes installing via debootstrap and a fake
    start-stop-daemon. (Closes: #714254)

 -- Gergely Nagy <algernon@madhouse-project.org>  Fri, 25 Oct 2013 13:57:27 +0200

syslog-ng (3.3.9-1) unstable; urgency=low

  * New upstream release.
  * Include missed ivykis header (closes: #708793).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 26 May 2013 09:06:21 +0200

syslog-ng (3.3.6-2) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Use /dev/ttyva on kFreeBSD as the target of the d_console_all
    destination (closes: #697042).
  * Use the standard /var/log/mail.{info,err,warn} location for the
    various mail-related logs (closes: #692056).
  * Don't mark systemd symlinks in /etc as conffiles.
  * Instead of installing systemd service file symlinks, install a
    conffile, that includes the real service file (closes: #690067).
  * Do not forcibly remove the systemd service files, that code is not
    needed anymore.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Sat, 02 Mar 2013 16:03:18 +0100

syslog-ng (3.3.6-1) unstable; urgency=low

  * New upstream release:
    - fixes disconnect on charset decoding error when using UDP sources
      (closes: #674099),
    - use upstream, packaged ivykis.